fix modal close-btn to be always visible

--- a/src/styles/eventModal.css
+++ b/src/styles/eventModal.css
@@ -1,11 +1,16 @@
-.modal img {
-  width: 100%;
-  object-fit: cover;
-  border-radius: 5px 0 0 0;
-  max-height: 400px;
+/* - - - OVERLAY - - - */
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
-.modal .close-button {
+.overlay .close-button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,15 +18,25 @@
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  position: absolute;
+  position: fixed;
   top: 10px;
   right: 10px;
   transition: all ease 0.15s;
+  cursor: pointer;
 }
 
-.modal .close-button:hover {
+.overlay .close-button:hover {
   opacity: 0.8;
   cursor: pointer;
+}
+
+/* - - - MODAL - - - */
+
+.modal img {
+  width: 100%;
+  object-fit: cover;
+  border-radius: 5px 0 0 0;
+  max-height: 400px;
 }
 
 .modal .material-symbols-outlined {
@@ -50,16 +65,6 @@
 .modal p {
   font-size: 14px;
   margin-left: 20px;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 1000;
-  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .modal {
